# 21co-rag

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.local  Dockerfile.streamlit  IMPLEMENTATION.md  README.md  TEST_COVERAGE_REPORT.md  chunking_guide.txt  debug_react_agent.py  demo_profiling.py  deploy-gcp.sh  deploy.config.example  docker-compose.local.yml  pyproject.toml  pytest.ini  requirements-core.txt  requirements-dev.txt  requirements.txt  run_demo.sh  start-local.sh  stop-local.sh  streamlit_app.py  test_batch_upload.py  test_document.txt  test_logging.py  test_profiling.py  test_streamlit_logs.py  test_trace.py
.claude/: settings.local.json
docker/: Dockerfile  docker-compose.yml
docs/: LANGCHAIN_INTEGRATION.md
handover/: HANDOVER.md  HANDOVER_2025-07-28.md  HANDOVER_BATCH_PROCESSING_20250728.md  HANDOVER_LANGCHAIN_REACT_20250727.md  HANDOVER_MONITORING_PROFILING_20250728.md  architecture_diagram.md  deployment_guide.md  handover_letter.md
sample_data/: rag_system_guide.txt  sample_document.txt  technical_specs.json
sample_data/batch_test/: document_01.txt  document_02.txt  document_03.txt  document_04.json  document_05.txt  document_06.txt  (+4 more)
src/: config.py
tests/: README.md  conftest.py  test_api.py  test_chunking.py  test_config.py  test_custom_llm.py  test_embeddings.py  test_job_tracker.py  test_middleware.py  test_monitoring.py  test_profiling.py  test_react_agent.py  test_react_agent_simple.py  test_redis_memory.py  test_routes_additional.py  test_validation.py  test_vector_db.py
(+17 files in other folders)
